# messages-server

./: .gitignore  README.md  heroku-Dockerfile  local-Dockerfile  pyproject.toml
.github/: codecov.yml
.github/workflows/: pipeline.yml  pipeline_dev.yml
docker/: Dockerfile  coverage-compose.yml  docker-compose.yml  pytest.Dockerfile  testdb-compose.yml
src/: classes.py  constants.py  main.py
src/app/: messages.py  users.py
src/firebase/: access.py
src/mocks/firebase/: auth.py  database.py
src/mongo/: database.py  schemas.py
src/postgres/: models.py  schemas.py
src/repositories/: message_utils.py  user_utils.py
tests/: conftest.py  test_main.py  test_messages.py  test_users.py  utils.py
