[tool.poetry]
name = "python-fastapi-server"
version = "0.1.0"
description = ""
authors = ["Facundo Mastricchio <facundomastricchio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
flake8 = "^4.0.1"
pylint = "^2.13.5"
pytest-cov = "^3.0.0"
black = "^22.3.0"
requests = "^2.27.1"
firebase-admin = "^5.2.0"
SQLAlchemy = "^1.4.36"
psycopg2 = "^2.9.3"
requests-mock = "^1.9.3"
motor = "^3.0.0"
pymongo = {extras = ["srv"], version = "^4.1.1"}
uvloop = "0.14.0"
nest-asyncio = "^1.5.5"
pytz = "^2022.1"
pytest = "7.1.2"
pytest-asyncio = "^0.18.3"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
